--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "digitalpacobookstores",
-  "version": "0.0.1-alpha",
+  "version": "0.0.1",
   "description": "Creación de librería de javascript y css ",
   "main": "dist/index.js",
   "scripts": {
@@ -8,6 +8,8 @@
     "dev": "nodemon src/index.js --ext js --exec babel-node",
     "build": "babel src --ignore src/**/__tests__/ -d dist",
     "start": "node dist/index.js",
+    "login": "npm login",
+    "publish": "npm publish",
     "test": "standard --fix && jest"
   },
   "standard": {
